# RenderingSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
Demo/: CMakeLists.txt
Demo/Models/backpack/: backpack.gltf  backpack.mtl
Demo/Models/cube/: container.gltf
Demo/Models/monkey/: monkey.mtl
Demo/Shaders/: fLine.glsl  fModel.glsl  fPlane.glsl  fScreen.glsl  fUberShader.glsl  vLine.glsl  vModel.glsl  vPlane.glsl  vScreen.glsl  vUberShader.glsl
Demo/include/: Demo.h
Demo/src/: Demo.cpp
Engine/: CMakeLists.txt
Engine/include/Engine/: Engine.h
Engine/include/Engine/Core/: Application.h  Core.h  EngineConfig.h  EngineConfigParser.h  Input.h  Keys.h  Logger.h  Startup.h  Window.h
Engine/include/Engine/Core/Types/: Color.h  HashedString.h  Line.h  Mat.h  Mat2.h  Mat3.h  Mat4.h  Transform.h  Vec.h  Vec2.h  Vec3.h  Vec4.h  Vertex.h
Engine/include/Engine/Events/: EventBase.h  EventCallback.h  EventDispatcher.h  Events.h  FreeFunctionCallback.hpp  ICallback.hpp
Engine/include/Engine/LLRenderer/: ArcBallCamera.cpp  ArcBallCamera.h  Buffers.h  Camera.cpp  Camera.h  DirectionalLight.h  ErrorLogger.h  FreeCamera.cpp  FreeCamera.hpp  Handles.h  Light.h  PointLight.h  RenderDevice.cpp  RenderDevice.h  Renderer.cpp  Renderer.h  RendererResourceHandle.h  ResourceHandle.h  Vertex.h
Engine/include/Engine/LLRenderer/OpenGL/: Camera.h  GLFramebuffer.cpp  GLFramebuffer.h  GLLine.h  GLMesh.h  GLModel.h  GLQuad.h  GLRenderDevice.cpp  GLRenderer.cpp  GLRenderer.h  GLShader.h  GLTexture.h
Engine/include/Engine/Platform/: Timer.cpp  Timer.h
Engine/include/Engine/Platform/GLFW/: GlfwInput.cpp  GlfwInput.h  GlfwWindow.cpp  GlfwWindow.h  Input.cpp
Engine/include/Engine/Resources/: Image.h  ImageLoader.cpp  ImageLoader.h  ManagedResources.h  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ResourceCache.h  ResourceHandle.h  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  Texture2DMeshHandle.h
Engine/include/Engine/Resources/Loaders/: ModelLoader.cpp  ModelLoader.h  Texture2DLoader.cpp  Texture2DLoader.h
Engine/include/Engine/Utility/: FlagEnum.h  ReadFile.cpp  ReadFile.h  Singleton.h  TypeString.h
Engine/src/: Application.cpp  EngineConfig.cpp  Input.cpp  Window.cpp
